# webapp/swagger.yaml
@@ -109,6 +109,9 @@ definitions:
         x-go-package: github.com/cloudbase/garm/params
     CreateEnterpriseParams:
         properties:
+            agent_mode:
+                type: boolean
+                x-go-name: AgentMode
             credentials_name:
                 type: string
                 x-go-name: CredentialsName
@@ -234,6 +237,9 @@ definitions:
         x-go-package: github.com/cloudbase/garm/params
     CreateOrgParams:
         properties:
+            agent_mode:
+                type: boolean
+                x-go-name: AgentMode
             credentials_name:
                 type: string
                 x-go-name: CredentialsName
@@ -251,6 +257,9 @@ definitions:
         x-go-package: github.com/cloudbase/garm/params
     CreatePoolParams:
         properties:
+            enable_shell:
+                type: boolean
+                x-go-name: EnableShell
             enabled:
                 type: boolean
                 x-go-name: Enabled
@@ -309,6 +318,9 @@ definitions:
         x-go-package: github.com/cloudbase/garm/params
     CreateRepoParams:
         properties:
+            agent_mode:
+                type: boolean
+                x-go-name: AgentMode
             credentials_name:
                 type: string
                 x-go-name: CredentialsName
@@ -332,6 +344,9 @@ definitions:
             disable_update:
                 type: boolean
                 x-go-name: DisableUpdate
+            enable_shell:
+                type: boolean
+                x-go-name: EnableShell
             enabled:
                 type: boolean
                 x-go-name: Enabled
@@ -1047,6 +1062,12 @@ definitions:
                 description: Agent mode indicates whether or not we need to install the GARM agent on the runner.
                 type: boolean
                 x-go-name: AgentMode
+            agent_shell_enabled:
+                type: boolean
+                x-go-name: AgentShellEnabled
+            agent_token:
+                type: string
+                x-go-name: AgentToken
             agent_tools:
                 $ref: '#/definitions/GARMAgentTool'
             ca_bundles:
@@ -1230,6 +1251,9 @@ definitions:
         x-go-package: github.com/cloudbase/garm/params
     MetadataServiceAccessDetails:
         properties:
+            agent_url:
+                type: string
+                x-go-name: AgentURL
             callback_url:
                 type: string
                 x-go-name: CallbackURL
@@ -1335,6 +1359,9 @@ definitions:
                 format: date-time
                 type: string
                 x-go-name: CreatedAt
+            enable_shell:
+                type: boolean
+                x-go-name: EnableShell
             enabled:
                 type: boolean
                 x-go-name: Enabled
@@ -1583,6 +1610,9 @@ definitions:
             disable_update:
                 type: boolean
                 x-go-name: DisableUpdate
+            enable_shell:
+                type: boolean
+                x-go-name: EnableShell
             enabled:
                 type: boolean
                 x-go-name: Enabled
@@ -1788,6 +1818,9 @@ definitions:
         x-go-package: github.com/cloudbase/garm/params
     UpdateEntityParams:
         properties:
+            agent_mode:
+                type: boolean
+                x-go-name: AgentMode
             credentials_name:
                 type: string
                 x-go-name: CredentialsName
@@ -1888,6 +1921,9 @@ definitions:
         x-go-package: github.com/cloudbase/garm/params
     UpdatePoolParams:
         properties:
+            enable_shell:
+                type: boolean
+                x-go-name: EnableShell
             enabled:
                 type: boolean
                 x-go-name: Enabled
@@ -1943,6 +1979,9 @@ definitions:
         x-go-package: github.com/cloudbase/garm/params
     UpdateScaleSetParams:
         properties:
+            enable_shell:
+                type: boolean
+                x-go-name: EnableShell
             enabled:
                 type: boolean
                 x-go-name: Enabled
